--- a/about.html
+++ b/about.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="Nav.css">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <title>InfinityCraft - About</title>
+  <link rel="shortcut icon" type="image/jpg" href="About/Assets/minecart.png"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxygen">
+    <link rel="stylesheet" href="About/Nav.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 body {
   font-family: Arial, Helvetica, sans-serif;
+}
+
+Title1 {
+    font-family: Arial, Helvitica, sans-serif;
 }
 </style>
 </head>
@@ -22,8 +28,7 @@ body {
   background-size: cover;
 }
 </style>
-  <title>InfinityCraft - Bedwars</title>
-  <link rel="shortcut icon" type="image/jpg" href="Assets/minecart.png"/>
+
   <div class="topnav">
     <a href="http://www.infinitycraftmc.co.uk">Home</a>
     <a href="https://www.infinitycraftmc.co.uk/About">About</a>
@@ -44,12 +49,10 @@ body {
     </div> 
   </div>
 
-<h1 style="text-align: center;color: rgb(0,0,0);font-family: Comfortaa, sans-serif;">Bedwars</h1>
+<h1 style="text-align: center;color: rgb(0,0,0);font-family: Comfortaa, sans-serif;">About InfinityCraft</h1>
+    <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">Just a server, yeah, thats it, just a server.</p>
 	
-<p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">This server is currently inactive due to it being broken, we'll fix it soon.</p>
-    <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">(We really need to stop procrastinating...)&nbsp;</p>
-	
-	<style>
+<style>
 .footer {
   position: fixed;
   left: 0;
@@ -63,6 +66,6 @@ body {
 <div class="footer">
   <p style="font-family: Oxygen, sans-serif;">© Copyright 2021 InfinityCraft, All Rights Reserved.</p>
 </div>
-	
+
 </body>
 </html>
