--- a/bedwars.html
+++ b/bedwars.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>InfinityCraft - Cities</title>
-  <link rel="shortcut icon" type="image/jpg" href="Assets/minecart.png"/>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxygen">
-    <link rel="stylesheet" href="Nav.css">
+    <link rel="stylesheet" href="Bedwars/Nav.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxygen">
 <style>
 body {
   font-family: Arial, Helvetica, sans-serif;
@@ -24,7 +22,8 @@ body {
   background-size: cover;
 }
 </style>
-	
+  <title>InfinityCraft - Bedwars</title>
+  <link rel="shortcut icon" type="image/jpg" href="Bedwars/Assets/minecart.png"/>
   <div class="topnav">
     <a href="http://www.infinitycraftmc.co.uk">Home</a>
     <a href="https://www.infinitycraftmc.co.uk/About">About</a>
@@ -45,11 +44,12 @@ body {
     </div> 
   </div>
 
-<h1 style="text-align: center;color: rgb(0,0,0);font-family: Comfortaa, sans-serif;">Cities</h1>
-<p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">The Cities Server is the server that the staff team actually bother about, it's also the one that people are most familiar with.<br>
-  If you have played InfinityCraft, you've probably been on Cities most of the time since its always online.<br><br>Fun Fact: The background of this website is actually a screenshot from a city called 'Grass' inside of the cities server.</p>
+<h1 style="text-align: center;color: rgb(0,0,0);font-family: Comfortaa, sans-serif;">Bedwars</h1>
 	
-<style>
+<p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">This server is currently inactive due to it being broken, we'll fix it soon.</p>
+    <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">(We really need to stop procrastinating...)&nbsp;</p>
+	
+	<style>
 .footer {
   position: fixed;
   left: 0;
