--- a/cities.html
+++ b/cities.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>InfinityCraft - About</title>
-  <link rel="shortcut icon" type="image/jpg" href="Assets/minecart.png"/>
+  <title>InfinityCraft - Cities</title>
+  <link rel="shortcut icon" type="image/jpg" href="Cities/Assets/minecart.png"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxygen">
-    <link rel="stylesheet" href="Nav.css">
+    <link rel="stylesheet" href="Cities/Nav.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 body {
   font-family: Arial, Helvetica, sans-serif;
-}
-
-Title1 {
-    font-family: Arial, Helvitica, sans-serif;
 }
 </style>
 </head>
@@ -28,7 +24,7 @@ body {
   background-size: cover;
 }
 </style>
-
+	
   <div class="topnav">
     <a href="http://www.infinitycraftmc.co.uk">Home</a>
     <a href="https://www.infinitycraftmc.co.uk/About">About</a>
@@ -49,8 +45,9 @@ body {
     </div> 
   </div>
 
-<h1 style="text-align: center;color: rgb(0,0,0);font-family: Comfortaa, sans-serif;">About InfinityCraft</h1>
-    <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">Just a server, yeah, thats it, just a server.</p>
+<h1 style="text-align: center;color: rgb(0,0,0);font-family: Comfortaa, sans-serif;">Cities</h1>
+<p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">The Cities Server is the server that the staff team actually bother about, it's also the one that people are most familiar with.<br>
+  If you have played InfinityCraft, you've probably been on Cities most of the time since its always online.<br><br>Fun Fact: The background of this website is actually a screenshot from a city called 'Grass' inside of the cities server.</p>
 	
 <style>
 .footer {
@@ -66,6 +63,6 @@ body {
 <div class="footer">
   <p style="font-family: Oxygen, sans-serif;">© Copyright 2021 InfinityCraft, All Rights Reserved.</p>
 </div>
-
+	
 </body>
 </html>
