--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@ body {
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="/Cities">Cities</a>
-      <a href="/Bedwars">Bedwars</a>
+      <a href="/cities.html">Cities</a>
+      <a href="/bedwars.html">Bedwars</a>
       <a href="#">SMP</a>
     </div>
   </div> 
