added background.css to all files instead of using <style>>

--- a/bedwars.html
+++ b/bedwars.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="Nav.css">
+    <link rel="stylesheet" href="background.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
@@ -13,15 +14,6 @@ body {
 </style>
 </head>
 <body>
-<style>
-body {
-  background-image: url('https://github.com/InfinityCraftMinecraft/InfinityCraftMinecraft.github.io/blob/main/Assets/infinitycraft-background-website.png?raw=true');
-  background-position: top center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-}
-</style>
   <title>InfinityCraft - Bedwars</title>
   <link rel="shortcut icon" type="image/jpg" href="Bedwars/Assets/minecart.png"/>
   <div class="topnav">
