--- a/punishments.html
+++ b/punishments.html
@@ -4,6 +4,7 @@
   <title>InfinityCraft - Punishments</title>
   <link rel="shortcut icon" type="image/jpg" href="Assets/minecart.png"/>
     <link rel="stylesheet" href="Nav.css">
+    <link rel="stylesheet" href="background.css">
 	    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxygen">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,12 +16,6 @@ body {
 </style>
 </head>
 <body>
-<style>
-body {
-  background-image: url('https://github.com/InfinityCraftMinecraft/InfinityCraftMinecraft.github.io/blob/main/Assets/infinitycraft-background-website.png?raw=true');
-  background-position: top center;
-}
-</style>
   <div class="topnav">
     <a href="http://www.infinitycraftmc.co.uk">Home</a>
     <a href="https://www.infinitycraftmc.co.uk/About">About</a>
