--- a/smp.html
+++ b/smp.html
@@ -4,6 +4,7 @@
   <title>InfinityCraft - SMP</title>
   <link rel="shortcut icon" type="image/jpg" href="Assets/minecart.png"/>
     <link rel="stylesheet" href="Nav.css">
+    <link rel="stylesheet" href="background.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
@@ -15,15 +16,6 @@ body {
 </style>
 </head>
 <body>
-<style>
-body {
-  background-image: url('https://github.com/InfinityCraftMinecraft/InfinityCraftMinecraft.github.io/blob/main/Assets/infinitycraft-background-website.png?raw=true');
-  background-position: top center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-}
-</style>
   <div class="topnav">
     <a href="http://www.infinitycraftmc.co.uk">Home</a>
     <a href="https://www.infinitycraftmc.co.uk/About">About</a>
