--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="shortcut icon" type="image/jpg" href="Assets/minecart.png"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="Nav.css">
+    <link rel="stylesheet" href="background.css">
     <link rel="stylesheet" href="Image.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxygen">
@@ -21,15 +22,6 @@ Title1 {
 </style>
 </head>
 <body>
-<style>
-body {
-  background-image: url('https://github.com/InfinityCraftMinecraft/InfinityCraftMinecraft.github.io/blob/main/Assets/infinitycraft-background-website.png?raw=true');
-  background-position: top center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-}
-</style>
 	
 <div class="topnav">
   <a href="http://www.infinitycraftmc.co.uk">Home</a>
