--- a/status.html
+++ b/status.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="Nav.css">
+    <link rel="stylesheet" href="background.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxygen">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,16 +15,6 @@ body {
 <title>InfinityCraft - Status</title>
 </head>
 <body>
-<style>
-body {
-  background-image: url('https://github.com/InfinityCraftMinecraft/InfinityCraftMinecraft.github.io/blob/main/Assets/infinitycraft-background-website.png?raw=true');
-  background-position: top center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-}
-</style>
-  <title>InfinityCraft - Bedwars</title>
   <link rel="shortcut icon" type="image/jpg" href="Status/Assets/minecart.png"/>
   <div class="topnav">
     <a href="http://www.infinitycraftmc.co.uk">Home</a>
