Made a css folder

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <title>InfinityCraft - Home</title>
   <link rel="shortcut icon" type="image/jpg" href="Assets/minecart.png"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="Nav.css">
-    <link rel="stylesheet" href="background.css">
-    <link rel="stylesheet" href="Image.css">
+    <link rel="stylesheet" href="CSS/Nav.css">
+    <link rel="stylesheet" href="CSS/background.css">
+    <link rel="stylesheet" href="CSS/Image.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxygen">
 <meta name="viewport" content="width=device-width, initial-scale=1">
