--- a/punishments.html
+++ b/punishments.html
@@ -3,8 +3,8 @@
 <head>
   <title>InfinityCraft - Punishments</title>
   <link rel="shortcut icon" type="image/jpg" href="Assets/minecart.png"/>
-    <link rel="stylesheet" href="Nav.css">
-    <link rel="stylesheet" href="background.css">
+    <link rel="stylesheet" href="CSS/Nav.css">
+    <link rel="stylesheet" href="CSS/background.css">
 	    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxygen">
 <meta name="viewport" content="width=device-width, initial-scale=1">
