--- a/cities.html
+++ b/cities.html
@@ -37,7 +37,7 @@ body {
     </div> 
   </div>
 
-<h1 style="text-align: center;color: rgb(0,0,0);font-family: Comfortaa, sans-serif;">Cities</h1>
+<h1 style="text-align: center;font-family: Comfortaa, serif;padding-top: 200px;color: rgb(0, 0, 0);">Cities</h1>
 <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">The Cities Server is the server that the staff team actually bother about, it's also the one that people are most familiar with.<br>
   If you have played InfinityCraft, you've probably been on Cities most of the time since its always online.<br><br>Fun Fact: The background of this website is actually a screenshot from a city called 'Grass' inside of the cities server.</p>
 	
