--- a/punishments.html
+++ b/punishments.html
@@ -36,7 +36,7 @@ body {
     </div> 
   </div>
 
-<h1 style="text-align: center;color: rgb(0,0,0);font-family: Comfortaa, sans-serif;">Punishment Appeals</h1>
+<h1 style="text-align: center;font-family: Comfortaa, serif;padding-top: 200px;color: rgb(0, 0, 0);">Punishment Appeals</h1>
 	
 <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">If you would like to make a punishment appeal, please email <b>punishmentappeals@infinitycraftmc.co.uk</b> with this format:</p>
 <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;"><br>
