--- a/smp.html
+++ b/smp.html
@@ -36,7 +36,7 @@ body {
     </div> 
   </div>
 
-<h1 style="text-align: center;color: rgb(0,0,0);font-family: Comfortaa, sans-serif;">SMP</h1>
+<h1 style="text-align: center;font-family: Comfortaa, serif;padding-top: 200px;color: rgb(0, 0, 0);">SMP</h1>
     <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">The SMP (which stands for Survival Multiplayer) is a chill, survival server.<br>It's basically just survival, but with friends!</p>
 
 <style>
