--- a/status.html
+++ b/status.html
@@ -36,7 +36,7 @@ body {
     </div> 
   </div>
 		   
-<h1 style="text-align: center;color: rgb(0,0,0);font-family: Comfortaa, sans-serif;">Server Status</h1>
+<h1 style="text-align: center;font-family: Comfortaa, serif;padding-top: 200px;color: rgb(0, 0, 0);">Server Status</h1>
 
 <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">This is the server status of InfinityCraft, if it says "Can't connect to server." That means that the server is offline.<br>(Server Status Banner made by NameMC)</p>
 
