--- a/about.html
+++ b/about.html
@@ -29,6 +29,7 @@ Title1 {
     <a href="https://infinitycraftmc.co.uk/croissant">Croissant</a>
     <a href="https://infinitycraftmc.co.uk/punishments">Punishment Appeals</a>
     <a href="https://infinitycraftmc.co.uk/status">Status</a>
+    <a href="https://infinitycraftmc.co.uk/credits">Credits</a>
     <div class="dropdown">
       <button class="dropbtn">Games
         <i class="fa fa-caret-down"></i>
