--- a/credits.html
+++ b/credits.html
@@ -37,11 +37,10 @@ body {
     </div> 
   </div>
 
-<h1 style="text-align: center;font-family: Comfortaa, serif;padding-top: 200px;color: rgb(0, 0, 0);">Bedwars</h1>
+<h1 style="text-align: center;font-family: Comfortaa, serif;padding-top: 200px;color: rgb(0, 0, 0);">Credits:</h1>
 	
-<p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">This server is currently inactive due to it being broken, we'll fix it soon.</p>
-    <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">(We really need to stop procrastinating...)&nbsp;</p>
-	
+<p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">Website Developers:<br><br>GoodCat Gamer<br>EndGaming10<br>InfinityPlayz9<br>--------------------<br>On the Server:<br><br>The whole InfinityCraft community</p>
+
 	<style>
 .footer {
   position: fixed;
