--- a/cities.html
+++ b/cities.html
@@ -25,6 +25,7 @@ body {
     <a href="https://infinitycraftmc.co.uk/croissant">Croissant</a>
     <a href="https://infinitycraftmc.co.uk/punishments">Punishment Appeals</a>
     <a href="https://infinitycraftmc.co.uk/status">Status</a>
+    <a href="https://infinitycraftmc.co.uk/credits">Credits</a>
     <div class="dropdown">
       <button class="dropbtn">Games
         <i class="fa fa-caret-down"></i>
