--- a/bedwars.html
+++ b/bedwars.html
@@ -15,7 +15,7 @@ body {
 </head>
 <body>
   <title>InfinityCraft - Bedwars</title>
-  <link rel="shortcut icon" type="image/jpg" href="Bedwars/Assets/minecart.png"/>
+<link rel="shortcut icon" href="/assets/infinityfavicon.ico"/>
   <div class="topnav">
     <a href="http://www.infinitycraftmc.co.uk">Home</a>
     <a href="https://www.infinitycraftmc.co.uk/About">About</a>
