--- a/punishments.html
+++ b/punishments.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>InfinityCraft - Punishments</title>
-  <link rel="shortcut icon" type="image/jpg" href="Assets/minecart.png"/>
+<link rel="shortcut icon" href="/assets/infinityfavicon.ico"/>
     <link rel="stylesheet" href="CSS/Nav.css">
     <link rel="stylesheet" href="CSS/background.css">
 	    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
