--- a/status.html
+++ b/status.html
@@ -15,7 +15,7 @@ body {
 <title>InfinityCraft - Status</title>
 </head>
 <body>
-  <link rel="shortcut icon" type="image/jpg" href="Status/Assets/minecart.png"/>
+<link rel="shortcut icon" href="/assets/infinityfavicon.ico"/>
   <div class="topnav">
     <a href="http://www.infinitycraftmc.co.uk">Home</a>
     <a href="https://www.infinitycraftmc.co.uk/About">About</a>
