--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>InfinityCraft - About</title>
-  <link rel="shortcut icon" type="image/jpg" href="About/Assets/minecart.png"/>
+<link rel="shortcut icon" href="/assets/infinityfavicon.ico"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxygen">
     <link rel="stylesheet" href="CSS/Nav.css">
