--- a/cities.html
+++ b/cities.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>InfinityCraft - Cities</title>
-  <link rel="shortcut icon" type="image/jpg" href="Cities/Assets/minecart.png"/>
+<link rel="shortcut icon" href="/assets/infinityfavicon.ico"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxygen">
     <link rel="stylesheet" href="CSS/Nav.css">
