--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>InfinityCraft - Home</title>
-  <link rel="shortcut icon" type="image/jpg" href="Assets/minecart.png"/>
+<link rel="shortcut icon" href="/assets/infinityfavicon.ico"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="CSS/Nav.css">
     <link rel="stylesheet" href="CSS/background.css">
