--- a/credits.html
+++ b/credits.html
@@ -14,7 +14,7 @@ body {
 </style>
 </head>
 <body>
-  <title>InfinityCraft - Bedwars</title>
+  <title>InfinityCraft - Credits</title>
 <link rel="shortcut icon" href="/assets/infinityfavicon.ico"/>
   <div class="topnav">
     <a href="http://www.infinitycraftmc.co.uk">Home</a>
