Added embeds for discord

--- a/bedwars.html
+++ b/bedwars.html
@@ -12,6 +12,15 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 </style>
+	
+<meta property="og:site_name" content="InfinityCraft">
+<meta property="og:url" content="https://www.infinitycraftmc.co.uk">
+<meta property="og:title" content="InfinityCraft">
+<meta property="og:description" content="InfinityCraft is a multi server network on the popular video-game, Minecraft!">
+<meta property="og:type" content="website">
+<meta name="theme-color" content="#d1c70d">
+<meta name="og:image" itemprop="image" content="minecart.png">
+	
 </head>
 <body>
   <title>InfinityCraft - Bedwars</title>
