--- a/about.html
+++ b/about.html
@@ -18,6 +18,15 @@ Title1 {
     font-family: Arial, Helvitica, sans-serif;
 }
 </style>
+	
+<meta property="og:site_name" content="InfinityCraft">
+<meta property="og:url" content="https://www.infinitycraftmc.co.uk">
+<meta property="og:title" content="InfinityCraft">
+<meta property="og:description" content="InfinityCraft is a multi server network on the popular video-game, Minecraft!">
+<meta property="og:type" content="website">
+<meta name="theme-color" content="#d1c70d">
+<meta name="og:image" itemprop="image" content="minecart.png">
+	
 </head>
 <body>
 
