--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Title1 {
 </div>
 
 <div class="description">
-  <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">play.infinitycraftmc.co.uk<br>Minecraft Java Edition<br>1.8 - 1.16.5</p>
+  <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">play.infinitycraftmc.co.uk<br>Minecraft Java Edition<br>1.8 - 1.17.x</p>
   
 </div>
 
