--- a/index.html
+++ b/index.html
@@ -33,22 +33,22 @@ Title1 {
 <body>
 	
 <div class="topnav">
-  <a href="http://www.infinitycraftmc.co.uk">Home</a>
-  <a href="https://www.infinitycraftmc.co.uk/About">About</a>
-  <a href="https://discord.gg/UvAqzReS3s">Discord</a>
-  <a href="https://store.infinitycraftmc.co.uk">Store</a>
-  <a href="https://infinitycraftmc.co.uk/croissant">Croissant</a>
-  <a href="https://infinitycraftmc.co.uk/punishments">Punishment Appeals</a>
-  <a href="https://infinitycraftmc.co.uk/status">Status</a>
-    <a href="https://infinitycraftmc.co.uk/credits">Credits</a>
+  <a href="http://www.infinitycraftmc.co.uk" style="font-family: Comfortaa">Home</a>
+  <a href="https://www.infinitycraftmc.co.uk/About" style="font-family: Comfortaa">About</a>
+  <a href="https://discord.gg/UvAqzReS3s" style="font-family: Comfortaa">Discord</a>
+  <a href="https://store.infinitycraftmc.co.uk" style="font-family: Comfortaa">Store</a>
+  <a href="https://infinitycraftmc.co.uk/croissant" style="font-family: Comfortaa">Croissant</a>
+  <a href="https://infinitycraftmc.co.uk/punishments" style="font-family: Comfortaa">Punishment Appeals</a>
+  <a href="https://infinitycraftmc.co.uk/status" style="font-family: Comfortaa">Status</a>
+    <a href="https://infinitycraftmc.co.uk/credits" style="font-family: Comfortaa">Credits</a>
   <div class="dropdown">
-    <button class="dropbtn">Games
+    <button class="dropbtn" style="font-family: Comfortaa">Games
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="/cities.html">Cities</a>
-      <a href="/bedwars.html">Bedwars</a>
-      <a href="#">SMP</a>
+      <a href="/cities.html" style="font-family: Comfortaa">Cities</a>
+      <a href="/bedwars.html" style="font-family: Comfortaa">Bedwars</a>
+      <a href="/smp.html" style="font-family: Comfortaa">SMP</a>
     </div>
   </div> 
 </div>
