--- a/404.html
+++ b/404.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="CSS/Nav.css">
     <link rel="stylesheet" href="CSS/background.css">
     <link rel="stylesheet" href="CSS/Image.css">
+    <link rel="stylesheet" href="CSS/fonts.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxygen">
 <meta name="viewport" content="width=device-width, initial-scale=1">
