--- a/punishments.html
+++ b/punishments.html
@@ -5,6 +5,7 @@
 <link rel="shortcut icon" href="/assets/infinityfavicon.ico"/>
     <link rel="stylesheet" href="CSS/Nav.css">
     <link rel="stylesheet" href="CSS/background.css">
+    <link rel="stylesheet" href="CSS/fonts.css">
 	    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxygen">
 <meta name="viewport" content="width=device-width, initial-scale=1">
