--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Title1 {
 </div>
 
 <div class="description">
-  <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">play.infinitycraftmc.co.uk<br>Minecraft Java Edition<br>1.8 - 1.17.x</p>
+  <button onClick="copyText()">Copy Server IP</button>
   
 </div>
 
@@ -83,5 +83,7 @@ Title1 {
 	
 </article>
 
+	<script src="JS/copy.js"></script>
+	
 </body>
 </html>
