--- a/404.html
+++ b/404.html
@@ -54,7 +54,7 @@ Title1 {
   </div> 
 </div>
 <article>
-<h1 style="text-align: center;font-family: Comfortaa, serif;padding-top: 200px;color: rgb(0, 0, 0);">404</h1>
+<h1 style="text-align: center;font-family: Comfortaa, serif;padding-top: 200px;color: rgb(0, 0, 0);">¯\_(ツ)_/¯</h1>
 
 <div class="description">
   <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">Whoops! It seem like you've went to a page that simply does not exist.<br>To go to a page, please click one of the buttons in the navigation bar.</p>
