--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>InfinityCraft - Home</title>
+
 <link rel="shortcut icon" href="/assets/infinityfavicon.ico"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="CSS/Nav.css">
@@ -54,15 +55,15 @@ Title1 {
   </div> 
 </div>
 <article>
-<h1 style="text-align: center;font-family: Comfortaa, serif;padding-top: 200px;color: rgb(0, 0, 0);">The InfinityCraft Minecraft Server Network</h1>
+<h1 style="text-align: center;font-family: Open Sans, serif;padding-top: 200px;color: rgb(0, 0, 0);">The InfinityCraft Minecraft Server Network</h1>
 
 <div class="description">
-  <p style="text-align: center;color: rgb(0,0,0);font-family: Oxygen, sans-serif;">InfinityCraft is a Minecraft server network that you can vibe on.<br>This website is still being developed, if you find a bug, please report it in the bug reports section of our discord server.</p>
+  <p style="text-align: center;color: rgb(0,0,0);font-family: Open Sans , sans-serif;">InfinityCraft is a Minecraft server network that you can vibe on.<br>This website is still being developed, if you find a bug, please report it in the bug reports section of our discord server.</p>
   
 </div>
 
 <div class="description">
-  <button onClick="copyText()">Copy Server IP</button>
+  <button onClick="copyText()" class="copy-button">Copy Server IP</button>
   
 </div>
 
@@ -84,6 +85,7 @@ Title1 {
 </article>
 
 	<script src="JS/copy.js"></script>
+
 	
 </body>
 </html>
